# poster-maker

./: .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
electron/: main.cjs  preload.cjs
src/: App.tsx  Layout.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: Controls.tsx  Preview.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  radio-group.tsx  slider.tsx  sonner.tsx  tabs.tsx
src/lib/: paper.ts  pdf.ts  tiling.ts
